# edy

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
UI/: csam2.py  gradio_ui.py  ui_options.py  util.py
dataset_toolkits/: encode_ss_latents.py  extract_scale.py  mask_post_processing.py  render.py  types.py  utils.py
dataset_toolkits/blender_script/: render.py
dataset_toolkits/blender_script/3D-Front/: extractor.py  objects.py  transforms.py  utils.py
dataset_toolkits/datasets/: 3D_FRONT.py  3D_FUTURE.py  EDY.py
dataset_toolkits/metadata/: common.py  edy.py
extensions/vox2seq/: benchmark.py
extensions/vox2seq/vox2seq/pytorch/: __init__.py
scene/: colmap_loader.py  dataset_readers.py  point_cloud.py
scene/models/: gaussian.py
scripts/: apply_mask.py  img_point_adder.py
src/edy/: feature_encoder.py  utils.py
src/edy/data_modules/: base.py  edy.py
src/edy/datasets/: edy_dataset.py
src/edy/flow/: de.py  noise_scheduler.py  path.py  simulator.py  vector_field.py
src/edy/mesh/: __init__.py  cube_to_mesh.py  flexicubes.py  utils.py
src/edy/metadata/: common.py  edy.py  front_3d.py
src/edy/models/: sparse_structure_flow.py  sparse_structure_vae.py  structured_latent_flow.py
src/edy/models/slat_vae/: base.py  decoder_mesh.py
src/edy/modules/: norm.py  position_head.py  spatial.py  utils.py
src/edy/modules/attention/: __init__.py  full_attn.py  mha.py
src/edy/modules/sparse/: __init__.py  activations.py  conv.py  core.py  linear.py  norm.py  spatial.py  tensor.py
src/edy/modules/sparse/attention/: __init__.py  full_attn.py  mha.py  modules.py  serialized_attn.py  utils.py  windowed_attn.py
src/edy/modules/sparse/conv/: __init__.py  conv.py
src/edy/modules/sparse/transformer/: __init__.py  blocks.py  modulated.py
src/edy/modules/transformer/: __init__.py  blocks.py  modulated.py
src/edy/pipelines/: __init__.py  base.py  image_to_scene.py
src/edy/renderers/: __init__.py  mesh_renderer.py  octree_renderer.py
src/edy/representations/: __init__.py
src/edy/representations/mesh/: __init__.py  cube2mesh.py  cube_to_mesh.py  flexicubes.py  tables.py  utils.py  utils_cube.py
src/edy/representations/mesh/flexicubes/: flexicubes.py  utils.py
src/edy/representations/mesh/flexicubes/examples/: extraction.ipynb  loss.py  optimization.ipynb  optimize.py  render.py  util.py
src/edy/representations/octree/: octree_dfs.py
src/edy/samplers/: __init__.py  flow_euler.py
src/edy/samplers/mixins/: classifier_guidance_mixin.py  guidance_interval_mixin.py
src/edy/trainers/: base.py  flow_matching.py
src/edy/trainers/mixins/: cfg.py
tests/models/: test_encoder.py
tests/modules/: test_mha.py  test_sdpa.py
utils/: __init__.py  dist.py  sh.py
utils/activations/: __init__.py  inverse_sigmoid.py
utils/graphics/: __init__.py  focal.py  transform.py
