[project]
name = "edy"
version = "0.1.0"
dependencies = [
    "opencv-python",
    "numpy",
    "matplotlib",
    "torch",
    "spconv",
    "jaxtyping>=0.3.3",
    "tqdm",
    "pandas",
    "dotenv>=0.9.9",
    "huggingface-hub[cli]>=1.1.5",
    "hf-transfer>=0.1.9",
    "triton>=3.5.1",
    "mathutils>=3.3.0",
    "bpy>=5.0.0",
]

[project.urls]
Repository = "https://github.com/Arktetra/edy.git"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
default = true
explicit = true

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda" }
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
