[project]
name = "edy"
version = "0.1.0"
dependencies = [
    "opencv-python",
    "numpy",
    "matplotlib",
    "torch",
    "spconv",
    "jaxtyping>=0.3.3",
    "tqdm",
    "pandas",
    "dotenv>=0.9.9",
    "huggingface-hub[cli]>=1.1.5",
    "hf-transfer>=0.1.9",
    "triton>=3.5.1",
    "bpy>=5.0.0",
    # "mathutils>=3.3.0",
    "jupyterlab>=4.5.1",
    "safetensors>=0.7.0",
    "utils3d>=0.1.0",
]

[dependency-groups]
dev = [
    "nvitop>=1.6.1",
    "pre-commit>=4.5.0",
]

[project.urls]
Repository = "https://github.com/Arktetra/edy.git"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
default = true
explicit = true

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda" }
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E722", "E731", "F722"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

